--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,1 +1,321 @@
+@import "../../styles/partials/fonts";
+@import "../../styles/partials/mixins";
+@import "../../styles/partials/variables";
 
+
+.hero{
+    background-color: $green;
+    width: 100%;
+    height: 580px;
+    display: flex;
+    justify-content: space-between;
+    padding: 5rem 4rem;
+    &__left{ 
+        width: 40%;
+        color: $White;
+    }
+    &__right{
+        
+    }
+
+    &__button{
+        margin-top: 2rem;
+        color: $green;
+        padding: 12px 24px;
+        border: 2px solid black;
+        border-radius:32px ;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 0.9;
+        padding: 1rem 2rem;
+        background: linear-gradient(90deg, #C7FF9B 0%, #FFF6A7 100%);
+        &-gradient{
+            display: flex;
+            align-items: center;
+            transition: 0.3s;
+        }
+    }
+}
+
+.header{
+    font-size: 3rem;
+    width: 562px;
+    height: 151px;
+}
+.paragragh{
+    font-size: 2rem;
+    margin-bottom: 5rem;
+}
+
+.about{
+    display: flex;
+    // width: 100%;
+    height: 200px;
+    margin: 4rem 0rem 35rem 0rem;
+    &__left{
+        background-color: $green;
+        width: 796px;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        // align-items: flex-start;
+        padding: 4rem 2rem 0rem 2rem ;
+        border-radius: 4px;
+        color: $White;
+
+    }
+    &__right{
+        width: 404px;
+    }
+    
+    &-header{
+        font-size: 3rem;
+        text-align: center;
+        margin-bottom: 3rem;
+    }
+    &-paragraph{
+        font-size: 1.5rem;
+        text-align: center;
+        margin-bottom: 4rem;
+
+    }
+}
+
+.subjects{
+    width: 100%;
+    height: 592px;
+    background-color: $green;
+    display: flex;
+    padding: 2rem;
+    max-width: max-width;
+    flex-direction: column;
+
+    &__header{
+        align-self: center;
+        color: $White;
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+        font-weight: 600;
+        font-size: 3rem;
+
+    }
+}
+
+.subjects-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.row{
+    display: flex;
+    margin-bottom: 6rem;
+}
+.subject-containers{
+    background-color: $White;
+    // width: 10rem;
+    margin-right: 3rem;
+    // flex-grow: 1;
+    display: flex;
+    padding: 1rem;
+    max-width: max-width;
+    box-shadow: 5px 5px 10px 0px rgba(18, 18, 18, 0.1);
+    align-items: flex-start;
+    transition: 0.3s;
+    flex-direction: column;
+    justify-content: flex-start;
+    width:100% ;
+    height:150px ;
+
+}
+
+.image{
+    padding-top: 1rem;
+    width: 100px;
+    height: 100px;
+}
+
+.list-of-teachers{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    padding: 2rem;
+    border-radius: 4px;
+    margin-top: 6rem;
+    margin-bottom: 10rem;
+    width: 100%;
+    height: 600px;
+    
+    &__header{
+        text-align: center;
+        background-color: $green;
+        align-self: center;
+        color: $White;
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+        font-weight: 600;
+        font-size: 2.3rem;
+        padding: 3rem 5rem;
+    
+    }
+
+    &__images{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+
+    }
+    &__teacher-image{
+        width: 30%;
+
+    }
+    &__single-teacher-image{
+        width: 100%;
+        height: 100%;
+
+    }
+
+}
+
+
+.list-of-testimonials{
+    width: 1121px;
+    height: 726px;
+    margin: auto;
+    margin-top: 25rem;
+    display: flex;
+    padding: 3rem;
+    max-width: max-width;
+    align-items: center;
+    padding-top: 41px;
+    border: 1px solid $green;
+    flex-direction: column;
+    padding-bottom: 76px;
+    justify-content: center;
+    background-color: $green;
+    &__header{
+        width: 530px;
+        height: 53px;
+        font-size: 1.7rem;
+        font-weight: 600;
+        color: $White;
+        text-align: center;
+        margin-bottom: 1rem;
+        margin-top: 5rem;
+    }
+    &__divs{
+        display: flex;
+    }
+    &__testimonial{
+        display: flex;
+        margin-bottom: 10rem;
+        background-color: $White;
+        padding: 2rem;
+        max-width: max-width;
+        box-shadow: 5px 5px 10px 0px rgba(18, 18, 18, 0.1);
+        align-items: center;
+        background-color: $White;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-top: 32px;
+        width: 33%;
+        margin-right: 1rem;
+    }
+    &__single-testimonial-image{
+        margin-top: 2rem;
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+
+    }
+}
+.Icon-quote{
+    width: 2rem;
+    margin-bottom: 2rem;
+}
+
+.testimonial-text{
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 2rem;
+
+}
+.testimonial-name{
+    font-size: 1rem;
+    font-weight: 300;
+}
+.testimonial-school{
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.join{
+    width: 1127px;
+    height: 674px;
+    margin: auto;
+    display: flex;
+    padding: 2rem;
+    max-width: max-width;
+    min-height: 80vh;
+    align-items: flex-start;
+    padding-right: 32px;
+    // flex-direction: column;
+    padding-bottom: 117px;
+    justify-content: center;
+    &__left{
+        width: 25rem;
+        object-fit: cover;
+
+    }
+    &__right{
+        margin-top: 3rem;
+        margin-left: 3rem;
+        width: 607px;
+        display: flex;
+        height: 312px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: flex-end;
+        background-color: $green;
+    }
+    &__lamp{
+        width: 100%;
+        object-fit: cover;
+    }
+    &__button{
+        margin-top: 2rem;
+        color: $green;
+        padding: 12px 24px;
+        border: 2px solid black;
+        border-radius:32px ;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 0.9;
+        margin-bottom: 1rem;
+        padding: 1rem 2rem;
+        background: linear-gradient(90deg, #C7FF9B 0%, #FFF6A7 100%);
+        &-gradient{
+            display: flex;
+            align-items: center;
+            transition: 0.3s;
+        }
+    }
+    .header-join{
+        color: $White;
+        font-weight: 600;
+        font-size: 3rem;
+    }
+    .paragraph-join{
+        color: $White;
+        font-size: 1rem;
+        align-self: flex-start;
+        text-align: center;
+        margin-inline:1rem ;
+        margin-top: 2.5rem;
+    }
+}
