--- a/src/pages/LogInPage/LogInPage.scss
+++ b/src/pages/LogInPage/LogInPage.scss
@@ -1,41 +1,191 @@
-// .login-signup-page {
-//     width: 300px;
-//     margin: 0 auto;
-//     padding: 20px;
-//     border: 1px solid #ccc;
-//     border-radius: 4px;
-//     text-align: center;
+@import "../../styles/partials/fonts";
+@import "../../styles/partials/mixins";
+@import "../../styles/partials/variables";
+$font: 'Faustina', sans-serif;
+$blue: #809bce;
+$purple: #9893da;
+$grey: #c3c3d8;
+$error-color: #ff5050;
+
+
+.message,
+.placement,
+.form,
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.placement {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background: #e8e8e8;
+  font-family: $font;
+  overflow: hidden;
+}
+
+.container {
+  width: 700px;
+  height: 400px;
+  background: white;
+  border-radius: 1rem;
+  position: relative;
+  display: grid;
+  grid-template: 100% / 50% 50%;
+  box-shadow: 2px 2px 10px 0 rgba(#333, 0.2);
+}
+
+.message {
+    position: absolute;
+    background: white;
+    border-radius: 1rem;
+    width: 50%;
+    height: 100%;
+    transition: 0.5s all ease;
+    transform: translateX(100%);
+    z-index: 4;
   
-//     h2 {
-//       margin-bottom: 20px;
-//     }
+    &.transformed {
+      transform: translateX(0);
+    }
+
+  &:before {
+    position: absolute;
+    content: "";
+    width: 1px;
+    height: 70%;
+    background: $grey;
+    opacity: 0;
+    left: 0;
+    top: 15%;
+  }
+
+  .button {
+    margin: 5px 0;
+    border-radius: 0.5rem;
+  }
+}
+
+.signup {
+  &:before {
+    opacity: 0.3;
+    left: 0;
+  }
+}
+
+.login {
+  &:before {
+    opacity: 0.3;
+    left: 100%;
+  }
+}
+
+.btn-wrapper {
+  width: 60%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: 0.5s all ease;
+
+  &.right {
+    right: 0;
+  }
+
+  &.left {
+    left: 0;
+  }
+}
+
+.form {
+  width: 100%;
+  height: 100%;
+  transition: 0.5s all ease;
+  transform: translateX(100%);
+
+  &.transformed {
+    transform: translateX(0);
+  }
+
+  &--heading {
+    font-size: 25px;
+    height: 50px;
+    color: $green;
+    font-family: $font;
+  }
+
+  &--signup {
+    border-right: 1px solid #999;
+  }
+}
+
+form {
+  width: 70%;
+
+  > * {
+    margin: 10px;
+  }
+
+  input {
+    width: 90%;
+    border: 0;
+    border-bottom: 1px solid #aaa;
+    font-size: 13px;
+    font-weight: 600;
+    color: $Black;
+    letter-spacing: 0.11em;
+
+    &::placeholder {
+      color: #333;
+      font-size: 10px;
+    }
+
+    &:focus {
+      outline: 0;
+      border-bottom: 1px solid rgba($blue, 0.7);
+      transition: 0.6s all ease;
+    }
+  }
+}
+
+.button {
+    border-radius: 0.5rem;
+  width: 100%;
+  height: 30px;
+  border: 0;
+  outline: 0;
+  color: white;
+  font-size: 15px;
+  font-weight: 400;
+  position: relative;
+  z-index: 3;
+  background: $green;
+  font-family: $font;
+  cursor: pointer;
+}
+
+.dropdown {
+    width: 90%;
+    border: 0;
+    border-bottom: 1px solid #aaa;
+    font-size: 13px;
+    font-weight: 300;
+    color: $Black;
+    letter-spacing: 0.11em;
+    margin-bottom: 10px;
   
-//     form {
-//       display: flex;
-//       flex-direction: column;
-//       margin-bottom: 20px;
-  
-//       input {
-//         margin-bottom: 10px;
-//         padding: 10px;
-//         border: 1px solid #ccc;
-//         border-radius: 4px;
-//         outline: none;
-//       }
-  
-//       button {
-//         padding: 10px;
-//         border: none;
-//         border-radius: 4px;
-//         background-color: #4285f4;
-//         color: white;
-//         cursor: pointer;
-//       }
-//     }
-  
-//     p {
-//       color: #4285f4;
-//       cursor: pointer;
-//     }
-//   }
-  
+    &:focus {
+      outline: 0;
+      border-bottom: 1px solid rgba($blue, 0.7);
+      transition: 0.6s all ease;
+    }
+  }
+  .error {
+    color: $error-color;
+    font-size: 12px;
+    margin-top: 5px;
+  }
