--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -4,7 +4,7 @@
 
 
 .hero{
-    background-color: $green;
+    background-color:brown;
     width: 100%;
     height: 580px;
     display: flex;
@@ -14,9 +14,9 @@
         width: 40%;
         color: $White;
     }
-    &__right{
+    // &__right{
         
-    }
+    // }
 
     &__button{
         margin-top: 2rem;
