--- a/src/pages/ChemistryBooks/ChemistryBooks.scss
+++ b/src/pages/ChemistryBooks/ChemistryBooks.scss
@@ -15,10 +15,10 @@
       font-size: 35px;
       color: #000000;
      margin: 0.5rem 0rem 2rem 5rem;
-     background-color:rgb(228, 225, 188);
+     background-color:#e4e1bc;
      border-radius: 1rem;
      padding-left:1rem;
-     width:19rem;
+     width:23rem;
     }
   
     .playlist-container {
