--- a/src/components/FetchVideos/FetchVideos.scss
+++ b/src/components/FetchVideos/FetchVideos.scss
@@ -14,6 +14,7 @@
   border-radius: 8px;
   overflow: hidden;
   transition: transform 0.2s ease-in-out;
+  background-color: #ddd;
 
   &:hover {
     transform: scale(1.05);
@@ -22,6 +23,7 @@
   img {
     width: 100%;
     height: auto;
+    
   }
 
   h3 {
