--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -44,26 +44,28 @@
   flex-direction: row;
   margin-bottom: 1rem;
   width: 100%;
+  height: 2rem;
+  padding: 1rem 10rem 0rem 10rem;
 }
 .footer__logo {
   margin-left: 2rem;
-  width: 33%;
+  width: 30%;
   color: #129D72;
   font-style: normal;
   letter-spacing: 0.25;
   text-transform: uppercase;
-  font-size: 2.1875rem;
-  line-height: 1.2;
+  font-size: 1.8rem;
+  line-height: 1;
   font-weight: 800;
 }
 .footer__copy-right {
   margin-right: 0rem;
-  width: 33%;
+  width: 30%;
   text-align: center;
 }
 .footer__icons {
   margin-right: 0rem;
-  width: 33%;
+  width: 35%;
   display: flex;
   justify-content: space-evenly;
 }
